# E-WiMill

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c  button_longpress.c  button_longpress.h  cli.c  cli.h  config_store.c  config_store.h  idf_component.yml  led_status.c  led_status.h  msc.c  msc.h  mscDontWork.c  sdcard.c  sdcard.h  setup_mode.c  setup_mode.h  tusb_config.h  web_fs.c  web_fs.h  wimill_pins.h
